src/pages/Projects/Projects.scss
.title-works {
    margin-top: 0;
    margin-bottom: 25px;
    font-weight: 100;
    font-family: "Cinzel", sans-serif;
    text-align: center;
}

.gallery-container {
    min-height: 70vh;
    width: 80%;
    padding: 0 10%;

    .image-container {
        overflow: hidden;
        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);

        .individual-painting {
            display: block;
            width: 100%;
            height: auto;

            &:hover {
                transform: scale(1.05);
                filter: brightness(70%);
            }

            &:hover,
            &:not(:hover) {
                transition: transform 0.5s ease, filter 0.5s ease;
            }
        }
    }
}

@media (max-width: 768px) {
    .title-works {
        font-size: 1.4rem;
    }

    .gallery-container {
        width: 96%;
        padding: 0 2%;
    }
}

